--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freebie</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="style/media.css">
 </head>
 <body>
     <header>
+        <div class="img__filter">
+            <div class=""></div>
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                <span></span>
+                </label>
+                <ul class="menu__box">
+                    <li><a class="menu__item" href="#">Home</a></li>
+                    <li><a class="menu__item" href="#">Gallery</a></li>
+                    <li><a class="menu__item" href="#">Contact</a></li>
+                </ul>
+                </div>
         <div class="nav">
             <div class="nav__menu">
                 <h1>Home</h1>
@@ -25,6 +39,91 @@
                 <a href="#"><img src="img/5.png"></a>
             </div>
         </div>
+        <div class="head__text">
+            <h1>Free portfolio template</h1>
+            <h3>for photografes</h3>
+            <button class="head__btn">DISCOVER</button>
+        </div>
+        <div class="head__dsccrptn">
+            <p>Recent</p> 
+        </div>
+    </div>
     </header>
+    <section class="photo">
+        <p>Recent works</p>
+        <div class="photo__cards">
+            <div class="photo__cards1">
+                <img src="img/7.png">
+            </div>
+            <div class="photo__cards2">
+                <div class="photo__spcl"><img src="img/8.png"></div>
+                <div class="photo__spcl2"><img src="img/9.png"></div>
+            </div>
+        </div>
+        <div class="photo__card-big">
+            <img src="img/10.png">
+        </div>
+        <div class="head__dsccrptn">
+            <p>Collections</p> 
+        </div>
+    </section>
+    <section class="cards">
+        <div class="cards__section1">
+            <div class="cards__photo1"><img src="img/11.png"></div>
+            <div class="cards__text1">
+                <h2>B&W COLLECTION</h2>
+                <p>They were six beautiful children but the youngest 
+                    was the prettiest of them all. Her skin was as clear
+                     and delicate as a rose-leaf and her eyes as blue as
+                      the deepest sea. But like all the others she had no 
+                      feet and her body ended in a fish’s tail.</p>
+                <button class="cards__btn">MORE</button>
+            </div>
+        </div>
+        <div class="cards__section2">
+            <div class="cards__text2">
+                <h2>Mother Earth</h2>
+                <p>And racism will be dead, for variety will
+                     then be the great fact of Humanity, and
+                      not uniformity. Mother Earth will finally 
+                      have given birth not to merely a Terrestrian, 
+                      but to a Galactic Empire</p>
+                <button class="cards__btn">MORE</button>
+            </div>
+            <div class="cards__photo2"><img src="img/12.png"></div>
+        </div>
+        <div class="cards__section3">
+            <div class="cards__photo1"><img src="img/13.png"></div>
+            <div class="cards__text1">
+                <h2>Portraits</h2>
+                <p>'Yes, we went to school in the sea,
+                     though you mayn't believe it—' 'I never 
+                     said I didn't!' interrupted Alice. 'You
+                      did,' said the Mock Turtle. 'Hold your 
+                      tongue!' added the Gryphon, before Alice
+                       could speak again.</p>
+                <button class="cards__btn">MORE</button>
+            </div>
+        </div>
+    </section>
+    <div class="head__dsccrptn">
+        <p>Contact</p> 
+    </div>
+    <footer>
+        <p>Get in touch</p>
+        <form>
+            <input type="text" placeholder="Your name" class="name">
+            <input type="email" placeholder="Email" class="name">
+            <textarea placeholder="Message"></textarea>
+            <button type="submit">SEND</button>
+        </form>
+        <p class="contact">Follow me on:</p>
+        <div class="foot__icons">
+            <a href="#"><img src="img/14.png"></a>
+            <a href="#"><img src="img/15.png"></a>
+            <a href="#"><img src="img/16.png"></a>
+            <a href="#"><img src="img/17.png"></a>
+        </div>
+    </footer>
 </body>
 </html>
